traces/bug_888.txt
src/fflib/lgfem.cpp:4097: error: DEAD_STORE
  The value written to &dimplot (type int) is never used.
Showing all 1 steps of the trace


src/fflib/lgfem.cpp:4097:18: Write of unused value
4095.     if (nargs[16]) drawborder= GetAny<bool>((*nargs[16])(s));
4096.     int   dimplot=2;
4097.     if (nargs[17]) dimplot= GetAny<long>((*nargs[17])(s));
                         ^
4098.     bool addtoplot=false, keepPV=false;
4099.     if (nargs[18]) addtoplot= GetAny<bool>((*nargs[18])(s));
